--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile ('com.github.ganfra:material-spinner:1.1.0'){
         exclude group: 'com.android.support', module: 'appcompat-v7'
     }
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
 //    compile 'com.github.ganfra:material-spinner:1.1.0'
 }
