--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'appcompat-v7'
     }
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.android.support:cardview-v7:21.0.+'
 //    compile 'com.github.ganfra:material-spinner:1.1.0'
 }
