--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
         </activity>
         <activity
             android:name=".ui.activity.SplashActivity"
-            android:label="@string/title_activity_splash" >
+            android:label="@string/title_activity_splash"
+            android:theme="@style/AppTheme.MyAwesomeAnimation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
