Modificacion de la interfaz Login. Consumo de Servicio: Server

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+inleggoUs=66693de8b1137505874542be6c9ef755e7016414
+inleggoPw=f46b678e9633ed5f49cd66b7a1a30fdd20cd4f94
