--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+
+def US_INLEGGO ='"' + inleggoUs + '"' ?: '"Define LastFm Api key"';
+def PW_INLEGGO ='"' + inleggoPw + '"' ?: '"Define LastFm Api key"';
+
 android {
     compileSdkVersion 22
     buildToolsVersion "23.0.0 rc2"
@@ -12,7 +16,10 @@ android {
         versionName "1.0"
     }
     buildTypes {
-        release {
+//        release {
+        debug {
+            buildConfigField 'String', 'US_INLEGGO', US_INLEGGO
+            buildConfigField 'String', 'PW_INLEGGO', PW_INLEGGO
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -29,5 +36,8 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.j256.ormlite:ormlite-core:4.48'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'io.reactivex:rxandroid:0.25.0'
 //    compile 'com.github.ganfra:material-spinner:1.1.0'
 }
