Configuracion de Gradle debug & release

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+        release {
+            buildConfigField 'String', 'US_INLEGGO', US_INLEGGO
+            buildConfigField 'String', 'PW_INLEGGO', PW_INLEGGO
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
 }
 
