--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         <activity
             android:name=".ui.activity.MainActivityPrincipal"
-            android:label="@string/app_name" >
+            android:label="@string/title_activity_MainActivityPrincipal" >
             <!--<intent-filter>-->
             <!--<action android:name="android.intent.action.MAIN" />-->
 
@@ -44,7 +44,7 @@
         </activity>
         <activity
             android:name=".ui.activity.SplashActivity"
-            android:label="@string/title_activity_splash"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.MyAwesomeAnimation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
